--- a/estilo.css
+++ b/estilo.css
@@ -1,9 +1,16 @@
 /* EXERCÍCIO 1: fontes */
 /* importá-las aqui... e definir as `font-family` da turminha... */
+@import url("fonts/ravie.css");
+@import url("fonts/verdana.css");
 
 
 body {
   background-color: #fff;
+  font-family: "Verdana";
+}
+
+h1 {
+  font-family: "Ravie";
 }
 
 strong {
