--- a/estilo.css
+++ b/estilo.css
@@ -4,9 +4,14 @@
 @import url("fonts/verdana.css");
 
 
+html, body, #recipiente {
+  min-height: 100vh;
+}
+
 body {
   background-color: #fff;
   font-family: "Verdana";
+  margin: 0;
 }
 
 h1 {
@@ -44,27 +49,31 @@ strong {
 
 /* EXERCÍCIO 2: layout da página */
 #recipiente {
-  /* layout da página aqui */
-  /* ... */
-  /* ... */
-  /* ... */
-  /* ... */
+  margin-left: auto;
+  margin-right: auto;
+  width: 800px;
+  display: grid;
+  grid-template-columns: 154px auto;
+  grid-template-rows: 97px auto 116px;
 }
 
 #cabecalho-pagina {
-
+  grid-column: 2;
 }
 
 #lateral {
-
+  grid-column: 1;
+  grid-row: 1 / -1;
 }
 
 #cardapio {
-
+  grid-column: 2;
+  grid-row: 2;
 }
 
 #rodape-pagina {
-
+  grid-column: 2;
+  grid-row: 3;
 }
 
 
