--- a/estilo.css
+++ b/estilo.css
@@ -33,6 +33,7 @@ strong {
   border-top: 1px solid #aac0ae;
   border-bottom: 1px solid #aac0ae;
   border-left: 1px solid #aac0ae;
+  padding: 20px;
 }
 
 #cardapio h3 {
@@ -101,6 +102,10 @@ strong {
 
 /* EXERCÍCIO 4: cada item do menu */
 article {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 
