--- a/estilo.css
+++ b/estilo.css
@@ -111,6 +111,9 @@ article {
 
 /* EXERCÍCIO 5: o rodapé */
 #rodape-pagina {
+  display: flex;
+  flex-direction: row-reverse;
+  margin: 46px 15px 25px 0;
 }
 
 /* EXERCÍCIO 6: lateral */
