--- a/estilo.css
+++ b/estilo.css
@@ -118,6 +118,9 @@ article {
 
 /* EXERCÍCIO 6: lateral */
 #lateral {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 
